# multiform-api

./: .gitignore  Cargo.toml  flake.nix
migrations/: 0003_3_person.down.sql  0003_3_person.up.sql  1_bestilling.down.sql  1_bestilling.up.sql  1_lufthavner.down.sql  1_lufthavner.up.sql  20240911170809_1_billett.down.sql  20240911170809_1_billett.up.sql  2_billett.up.sql  2_fly.down.sql  2_fly.up.sql  3_reiser.down.sql  3_reiser.up.sql  4_personer.down.sql  4_personer.up.sql  5_billett.down.sql  5_billett.up.sql
services/: flake.nix
src/: error.rs  file_server.rs  http_handler.rs  into_response.rs  main.rs  response.rs  router.rs  service.rs
src/api/: mod.rs
src/api/billett/: mod.rs  query.rs
src/api/lufthavn/: query.rs
src/api/person/: model.rs  query.rs
src/bestilling/: bestilling_id.rs  mod.rs  model.rs  router_args.rs
src/bestilling/billett/: get_billett.rs  lagre_billett.rs  mod.rs  model.rs  query.rs
src/bestilling/person/: mod.rs  model.rs  query.rs
src/billett/: mod.rs  model.rs  query.rs
src/fly/: mod.rs  model.rs  query.rs
src/lufthavn/: mod.rs  model.rs  query.rs
src/person/: mod.rs  model.rs  query.rs
src/reise/: model.rs
src/www/: mod.rs  util.rs
src/www/pages/: billett.rs  hjem.rs  mod.rs
static/: billett.js  styles.css
