[package]
name = "multiforms"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_qs = "0.13.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
tiny_http = "0.12.0"
tokio = { version = "1.40.0", features = ["full"] }
